# myriadmesh-server

./: .gitignore  Cargo.toml  EMERGENCY_ABUSE_PREVENTION_TODO.md  LICENSE  LLM_DEVELOPMENT_GUIDE.md  README.md  ROADMAP.md
crates/myriadmesh-appliance/: Cargo.toml
crates/myriadmesh-appliance/src/: cache.rs  device.rs  lib.rs  manager.rs  pairing.rs  power.rs  types.rs
crates/myriadmesh-ledger/: Cargo.toml
crates/myriadmesh-ledger/src/: block.rs  consensus.rs  entry.rs  error.rs  lib.rs  merkle.rs  storage.rs  sync.rs
crates/myriadmesh-updates/: Cargo.toml  README.md
crates/myriadmesh-updates/src/: coordination.rs  distribution.rs  lib.rs  schedule.rs  verification.rs
myriadnode-full/: Cargo.toml  config.toml
myriadnode-full/src/: api.rs  backhaul.rs  config.rs  diagnostics.rs  failover.rs  heartbeat.rs  lib.rs  main.rs  monitor.rs  node.rs  scoring.rs  storage.rs  websocket.rs
myriadnode-full/src/diagnostics/: baseline.rs  test_data.rs
myriadnode-full/test_data/diagnostics/: baseline.json
myriadnode-full/tests/: diagnostic_integration_tests.rs  integration_tests.rs
myriadnode-full/web-ui/: README.md  USAGE.md  package-lock.json  package.json  svelte.config.js  vite.config.js
myriadnode-full/web-ui/src/: app.html
myriadnode-full/web-ui/src/lib/: api.ts  dataService.ts  stores.ts  websocket.ts
myriadnode-full/web-ui/src/lib/components/: AdapterCard.svelte  StatCard.svelte
myriadnode-full/web-ui/src/routes/: +layout.svelte  +page.svelte
myriadnode-full/web-ui/src/routes/adapters/: +page.svelte
myriadnode-full/web-ui/src/routes/messages/: +page.svelte
myriadnode-full/web-ui/src/routes/nodemap/: +page.svelte
myriadnode-full/web-ui/src/routes/settings/: +page.svelte
myriadnode-full/web-ui/static/: README.md
