[workspace]
members = [
    "crates/myriadmesh-ledger",
    "crates/myriadmesh-appliance",
    "crates/myriadmesh-updates",
    "myriadnode-full",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
authors = ["MyriadMesh Contributors"]
license = "GPL-3.0-only"
repository = "https://github.com/myriadmesh/server"
homepage = "https://myriadmesh.org"
documentation = "https://docs.rs/myriadmesh-ledger"

[workspace.dependencies]
# Cryptography
sodiumoxide = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# WebSocket support
tokio-tungstenite = "0.21"

# Configuration
config = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }

# Database
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
blake2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
ed25519-dalek = "2.1"
zstd = "0.13"
rand = "0.8"

# Dev dependencies (for workspace members)
criterion = "0.5"
tempfile = "3.8"

# Protocol and core (from external repos)
myriadmesh-protocol = { path = "../myriadmesh-protocol/reference-impl" }
myriadmesh-node = { path = "../myriadmesh-node" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
